# Hermes

./: .gitignore  MANIFEST.in  README.md  main.py  publish.sh  pyproject.toml
hermes/: core.py  providers.py  utils.py  web.py
hermes/web_interface/: index.html
hermes/web_interface/assets/: default-Dlgw9Ft3.js  index-BjFyR3t5.js  index-D-hl0cGh.js  index-DCgpWnA6.css  tag-BNKjHbLw.js
