[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-ai"
version = "0.3.15"
description = "Hermes is a lightweight, powerful abstraction layer over LlamaIndex that simplifies building production-ready AI agents with essential utilities and multi-agent capabilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "langdetect>=1.0.9",
    "llama-index>=0.14.5",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-anthropic>=0.9.7",
    "llama-index-llms-azure-openai>=0.4.2",
    "llama-index-llms-gemini>=0.6.1",
    "llama-index-llms-google-genai>=0.6.2",
    "llama-index-llms-groq>=0.4.1",
    "llama-index-llms-litellm>=0.6.3",
    "llama-index-llms-ollama>=0.8.0",
    "llama-index-llms-openai>=0.6.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
    "yake>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes*"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"hermes" = [
    "web_interface/**/*",
    "web_interface/dist/**/*"
]
